control-plane/custom-gateway-api/conformance/tests/httproute-request-mirror.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: request-mirror
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mirror
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: infra-backend-v2
          namespace: gateway-conformance-infra
          port: 8080
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      namespace: gateway-conformance-infra
